benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-mix014_tso.oepc.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix014_tso.oepc.yml/mix014_tso.oepc.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix014_tso.oepc.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_g5c06caf/tmp/tmp7r4n793h.c
Compilation started
/tmp/BenchExec_run_g5c06caf/tmp/tmp7r4n793h.c: In function ‘P1’:
/tmp/BenchExec_run_g5c06caf/tmp/tmp7r4n793h.c:628:19: error: ‘FALSE’ undeclared (first use in this function)
  628 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_g5c06caf/tmp/tmp7r4n793h.c:628:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_g5c06caf/tmp/tmp7r4n793h.c:629:19: error: ‘TRUE’ undeclared (first use in this function)
  629 |   weak$$choice2 = TRUE;;
      |                   ^~~~
/tmp/BenchExec_run_g5c06caf/tmp/tmp7r4n793h.c: In function ‘main’:
/tmp/BenchExec_run_g5c06caf/tmp/tmp7r4n793h.c:796:19: error: ‘FALSE’ undeclared (first use in this function)
  796 |   weak$$choice0 = FALSE;;
      |                   ^~~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
